// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Patch Test: after patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "get is now diff",
        "id": 0,
        "myVal": 65243,
      },
    },
    "wrongcol": Object {},
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "get is now diff",
      "id": 0,
      "myVal": 65243,
    },
  },
}
`;

exports[`DbStore Patch Test: createresult 1`] = `
Object {
  "guestName": "gettext",
  "id": 0,
  "myVal": 4654320,
}
`;

exports[`DbStore Patch Test: dbstore after create 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "gettext",
        "id": 0,
        "myVal": 4654320,
      },
    },
    "wrongcol": Object {},
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore after create get 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "gettext",
        "id": 0,
        "myVal": 4654320,
      },
    },
    "wrongcol": Object {},
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore after nothingtoget 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {},
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore after patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "get is now diff",
        "id": 0,
        "myVal": 65243,
      },
    },
    "wrongcol": Object {},
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "get is now diff",
      "id": 0,
      "myVal": 65243,
    },
  },
}
`;

exports[`DbStore Patch Test: dbstore after patch get 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "get is now diff",
        "id": 0,
        "myVal": 65243,
      },
    },
    "wrongcol": Object {},
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "get is now diff",
      "id": 0,
      "myVal": 65243,
    },
  },
}
`;

exports[`DbStore Patch Test: dbstore after wrongcol 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "getState": Object {
    "simpleTestCol": Object {},
    "wrongcol": Object {},
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore at start 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getState": Object {},
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: errorstore after wrongcol 1`] = `
Object {
  "0": NotFound {
    "className": "not-found",
    "code": 404,
    "constructor": [Function],
    "data": undefined,
    "errors": Object {},
    "message": "Service 'wrongcol' not found",
    "name": "NotFound",
    "type": "FeathersError",
  },
}
`;

exports[`DbStore Patch Test: getcreated 1`] = `
Object {
  "guestName": "gettext",
  "id": 0,
  "myVal": 4654320,
}
`;

exports[`DbStore Patch Test: getpatched 1`] = `
Object {
  "guestName": "get is now diff",
  "id": 0,
  "myVal": 65243,
}
`;

exports[`DbStore Patch Test: nothingtoget 1`] = `[NotFound: No record found for id '0']`;

exports[`DbStore Patch Test: patchresult 1`] = `
Object {
  "guestName": "get is now diff",
  "id": 0,
  "myVal": 65243,
}
`;

exports[`DbStore Patch Test: wrongcollection 1`] = `[NotFound: Service 'wrongcol' not found]`;
